--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
   scroll-behavior: smooth;
+  text-decoration: none;
+  list-style: none;
 }
 
 ::-webkit-scrollbar {
@@ -69,6 +71,9 @@ body {
     rgb(9 9 121 / 3%) 0%,
     rgb(7 0 123 / 68%) 98%
   );
+}
+.second-header {
+  display: none;
 }
 .header-item {
   display: flex;
@@ -837,5 +842,87 @@ swiper-slide img {
   .int-left-box,
   .int-right-box {
     width: 90%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .header {
+    display: none;
+  }
+  .home {
+    display: none;
+  }
+  .second-header {
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    z-index: 10;
+    background-color: #fff;
+  }
+  .menu-title {
+    position: relative;
+    padding: 15px 18px;
+    text-align: center;
+    font-size: 13px;
+    color: #777777;
+  }
+  .menu-title button {
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 25px;
+    color: #a8a8a8;
+  }
+  .header-menu {
+    position: absolute;
+    left: -100%;
+    z-index: 11;
+    background-color: #ffffffb6;
+    backdrop-filter: blur(5px);
+    width: 440px;
+    min-height: 100vh;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+      rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  }
+  .header-menu-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px 20px;
+    font-size: 13px;
+    color: #252525;
+    border-top: 0.5px solid #7777773b;
+  }
+  .header-menu-item i {
+    color: #777777bb;
+  }
+  .menu {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px 10px 30px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  }
+  .menu button {
+    background-color: transparent;
+    border: none;
+    outline: none;
+    font-size: 40px;
+  }
+  .menu div {
+    max-width: 380px;
+    display: flex;
+    align-items: center;
+  }
+  .menu div img {
+    width: 60px;
+    height: 60px;
   }
 }
