--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ body {
 }
 
 .home {
+  position: relative;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -161,64 +162,15 @@ body {
   animation: showRight 1s ease forwards;
   animation-delay: 1s;
 }
-.home-sci {
-  position: absolute;
-  bottom: 40px;
-  width: 170px;
-  display: flex;
-  justify-content: space-between;
-}
-
-.home-sci a {
-  position: relative;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  width: 40px;
-  height: 40px;
-  background: transparent;
-  border: 2px solid #00abf0;
-  border-radius: 50%;
-  font-size: 20px;
-  color: #00abf0;
-  text-decoration: none;
-  z-index: 1;
-  overflow: hidden;
-  transition: 0.5s;
-}
-
-.home-sci a:hover {
-  color: #081b29;
-}
-
-.home-sci a::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background: #00abf0;
-  z-index: -1;
-  transition: 0.5s;
-}
-
-.home-sci a:hover::before {
+.home-wave{
   width: 100%;
-}
-
-.home-imgHover {
   position: absolute;
-  top: 0;
-  right: 30px;
-  width: 500px;
-  height: 100%;
-  background: transparent;
-  transition: 3s;
+  bottom: 0;
+  left: 0;
 }
 .news {
   width: 100vw;
-  padding: 70px 0px;
+  padding: 50px 0px;
   display: flex;
   align-items: center;
   justify-content: center;
