feat: added loading

--- a/style.css
+++ b/style.css
@@ -9,6 +9,54 @@
   list-style: none;
 }
 
+.loading {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
+    height: 100vh;
+    color: #fff;
+    z-index: 999999;
+    position: fixed;
+    top: 0;
+}
+
+.loading-page{
+  width: 250px;
+  height: 250px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: linear-gradient(to right, #000,#000,#000);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 1px 1px 25px 1px rgba(0, 141, 221, 1), 1px 1px 25px 1px rgba(0, 141, 221, 1), 1px 1px 25px 1px rgba(0, 141, 221, 1);
+  border-radius: 50%;
+}
+#logo{
+  height: 200px;
+  width: 200px;
+  stroke: #fff;
+  fill-opacity: 0;
+  stroke-width: 3px;
+  animation: draw 8s  ease;
+  stroke-dasharray: 4500;
+}
+@keyframes draw{
+  0%{
+      stroke-dashoffset: 4500;
+  }
+  100%{
+      stroke-dashoffset: 0;
+  }
+}
+
+
 ::-webkit-scrollbar {
   width: 6px;
   background-color: #f5f5f5;
