--- a/style.css
+++ b/style.css
@@ -35,8 +35,7 @@
   justify-content: center;
   flex-direction: column;
   gap: 1rem;
-  box-shadow: 1px 1px 25px 1px rgba(0, 141, 221, 1),
-    1px 1px 25px 1px rgba(0, 141, 221, 1), 1px 1px 25px 1px rgba(0, 141, 221, 1);
+  box-shadow: 1px 1px 25px 1px rgba(255, 119, 0, 1), 1px 1px 23px 1px rgba(0, 141, 221, 1), 1px 1px 21px 1px rgba(255, 119, 0, 1);
   border-radius: 50%;
 }
 #logo {
@@ -45,12 +44,12 @@
   stroke: #fff;
   fill-opacity: 0;
   stroke-width: 3px;
-  animation: draw 8s linear infinite;
-  stroke-dasharray: 4500;
+  animation: draw 15s linear infinite;
+  stroke-dasharray: 1500;
 }
 @keyframes draw {
   0% {
-    stroke-dashoffset: 4500;
+    stroke-dashoffset: 1500;
   }
   100% {
     stroke-dashoffset: 0;
