--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
   background-color: #f5f5f5;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: cornflowerblue;
+  background-color: rgba(123, 84, 0, 0.68);
   border-radius: 50px;
 }
 ::-webkit-scrollbar-track {
