--- a/bg.css
+++ b/bg.css
@@ -3,8 +3,8 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
       "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
       sans-serif;
-    /* -webkit-font-smoothing: antialiased; */
-    /* -moz-osx-font-smoothing: grayscale; */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     /* background-color: #fff; */
     /* user-select: none; */
     color: rgba(133, 92, 2, 0.829);
@@ -24,5 +24,7 @@ body {
     filter: opacity(0.7);
     .bg img{
       width: 100%;
+      /* display: flex; */
+      /* flex-wrap: wrap; */
     }
   }
