--- a/food.css
+++ b/food.css
@@ -1,132 +1,137 @@
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-      monospace;
-  }
-.container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 30px;
+.food-section-item {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-  
-  .food-nft{
-    user-select:none;
-    max-width: 300px;
-    margin: 5rem auto;
-    border: 1px solid #9c7a0822;
-    background-color: #705304;
-    background: linear-gradient(0deg, rgba(121, 92, 0, 0.877) 0%, rgba(17,0,32,.5) 100%);
-    box-shadow: 0 7px 20px 5px #7e5d0188;
-    border-radius: .7rem;
-    backdrop-filter: blur(7px);
-    -webkit-backdrop-filter: blur(7px);
-    overflow: hidden;
-    transition: .5s all;
-    hr{
-      width: 100%;
-      border: none;
-      border-bottom: 1px solid #88888855;
-      margin-top: 0;
+.food-section-item h4{
+  font-size: 21px;
+}
+.food-cards {
+  padding: 50px 0px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.food-nft {
+  max-width: 300px;
+  margin: 20px 30px;
+  border: 1px solid #9c7a0822;
+  background-color: #705304;
+  background: linear-gradient(
+    0deg,
+    rgba(121, 92, 0, 0.877) 0%,
+    rgba(17, 0, 32, 0.5) 100%
+  );
+  box-shadow: 0 7px 20px 5px #7e5d0188;
+  border-radius: 0.7rem;
+  backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(7px);
+  overflow: hidden;
+  transition: 0.5s all;
+  hr {
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #88888855;
+    margin-top: 0;
+  }
+  ins {
+    text-decoration: none;
+  }
+  .food-main {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    padding: 1rem;
+    .food-tokenImage {
+      border-radius: 0.5rem;
+      max-width: 100%;
+      height: 250px;
+      object-fit: cover;
     }
-    ins{
-      text-decoration: none;
+    .food-description {
+      margin: 0.5rem 0;
+      color: #ffffff;
     }
-    .food-main{
+    .food-tokenInfo {
       display: flex;
-      flex-direction: column;
-      width: 90%;
-      padding: 1rem;
-      .food-tokenImage{
-        border-radius: .5rem;
-        max-width: 100%;
-        height: 250px;
-        object-fit: cover;
-      }
-      .food-description{
-        margin: .5rem 0;
-        color: #ffffff;
-      }
-      .food-tokenInfo{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        .food-price{
-          display: flex;
-          align-items: center;
-          color: #ee83e5;
-          font-weight: 700;
-          ins{
-            margin-left: -.3rem;
-            margin-right: .5rem;
-          }
-        }
-        .food-duration{
-          display: flex;
-          align-items: center;
-          color: #a89ec9;
-          margin-right: .2rem;
-          ins{
-            margin: .5rem;
-            margin-bottom: .4rem;
-          }
-        }
-      }
-      .food-creator{
+      justify-content: space-between;
+      align-items: center;
+      .food-price {
         display: flex;
         align-items: center;
-        margin-top: .2rem;
-        margin-bottom: -.3rem;
-        ins{
-          color: #f8f8f8;
-          text-decoration: none;
+        color: #ee83e5;
+        font-weight: 700;
+        ins {
+          margin-left: -0.3rem;
+          margin-right: 0.5rem;
         }
-        .food-wrapper{
-          display: flex;
-          align-items: center;
-          border: 1px solid #ffffff22;
-          padding: .3rem;
-          margin: 0;
-          margin-right: .5rem;
+      }
+      .food-duration {
+        display: flex;
+        align-items: center;
+        color: #a89ec9;
+        margin-right: 0.2rem;
+        ins {
+          margin: 0.5rem;
+          margin-bottom: 0.4rem;
+        }
+      }
+    }
+    .food-creator {
+      display: flex;
+      align-items: center;
+      margin-top: 0.2rem;
+      margin-bottom: -0.3rem;
+      ins {
+        color: #f8f8f8;
+        text-decoration: none;
+      }
+      .food-wrapper {
+        display: flex;
+        align-items: center;
+        border: 1px solid #ffffff22;
+        padding: 0.3rem;
+        margin: 0;
+        margin-right: 0.5rem;
+        border-radius: 100%;
+        box-shadow: inset 0 0 0 4px #000000aa;
+        img {
           border-radius: 100%;
-          box-shadow: inset 0 0 0 4px #000000aa;
-          img{
-            border-radius: 100%;
-            border: 1px solid #ffffff22;
-            width: 2rem;
-            height: 2rem;
-            object-fit: cover;
-            margin: 0;
-          }
+          border: 1px solid #ffffff22;
+          width: 2rem;
+          height: 2rem;
+          object-fit: cover;
+          margin: 0;
         }
       }
     }
-    ::before{
-      position: fixed;
-      content: "";
-      box-shadow: 0 0 100px 40px #ffffff08;
-      top: -10%;
-      left: -100%;
-      transform: rotate(-45deg);
-      height: 60rem;
-      transition: .7s all;
+  }
+  ::before {
+    position: fixed;
+    content: "";
+    box-shadow: 0 0 100px 40px #ffffff08;
+    top: -10%;
+    left: -100%;
+    transform: rotate(-45deg);
+    height: 60rem;
+    transition: 0.7s all;
+  }
+  &:hover {
+    border: 1px solid #ffffff44;
+    box-shadow: 0 7px 50px 10px #000000aa;
+    transform: scale(1.015);
+    filter: brightness(1.3);
+    ::before {
+      filter: brightness(0.5);
+      top: -100%;
+      left: 200%;
     }
-    &:hover{
-      border: 1px solid #ffffff44;
-      box-shadow: 0 7px 50px 10px #000000aa;
-      transform: scale(1.015);
-      filter: brightness(1.3);
-      ::before{
-        filter: brightness(.5);
-        top: -100%;
-        left: 200%;
-      }
-    }
   }
-  .food-tokenImage{
-    width: 300px;
-  }
-  .food-main h2{
-    color: #fff;
-  }
+}
+.food-tokenImage {
+  width: 300px;
+}
+.food-main h2 {
+  color: #fff;
+}
