--- a/bg.css
+++ b/bg.css
@@ -1,30 +1,22 @@
 body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    /* background-color: #fff; */
-    /* user-select: none; */
-    color: rgba(133, 92, 2, 0.829);
-  }
-  
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-      monospace;
-  }
-  
-  .bg{
-    z-index: -1;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    filter: opacity(0.7);
-    .bg img{
-      width: 100%;
-      /* display: flex; */
-      /* flex-wrap: wrap; */
-    }
-  }
+  margin: 0;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: rgba(133, 92, 2, 0.829);
+}
+
+.bg {
+  width: 100%;
+  z-index: -10;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  filter: opacity(0.5);
+}
+.bg img {
+  width: 100%;
+  min-height: 100vh;
+  filter: brightness(70%);
+}
